<resources>
    <string name="app_name">Covid Tracker</string>
    <string name="coronavirus_image">coronavirusimage</string>
    <string name="app_title">Covid\nTracker</string>
    <string name="greeting">Welcome to the Covid-19 Tracker</string>
    <string name="graph_view">Graph View</string>
    <string name="statistical_information">statistical information</string>
    <string name="developer_name">App Developed by Spandan Saxena</string>
    <string name="check">Enable Fast Load</string>
    <string name="graphical_information">geographical information</string>
    <string name="indian_covid_dashboard">Indian Covid Dashboard</string>
    <string name="salute">WE STAND WITH EVERYONE FIGHTING ON THE FRONTLINES</string>
    <string name="helpline_numbers">Helpline Numbers</string>
    <string name="licenses">About</string>
    <string name="licensing">MIT License \n\nCopyright © 2021 Spandan Saxena\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the Software), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: \n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n \nTHE SOFTWARE IS PROVIDED AS IS, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="sources"><b>Sources:</b>  World Health Organization, John Hopkins school of Medicine, Covid19IndiaOrg, Bing and WorldMeter.</string>
    <string name="save">Share</string>
    <string name="evening">Good Evening</string>
    <string name="night">Have a Lovely Night</string>
    <string name="afternoon">Good Afternoon</string>
    <string name="morning">Good Morning</string>
    <string name="question">Were you at home today all day?</string>
    <string name="sensitive">This app fetches data from various data sources and thus information reflected here may differ from other sources.\n\n<b>WE STAND WITH EVERYONE FIGHTING ON THE FRONTLINES!</b></string>
    <string name="quote101">\"Don\'t Hoard groceries and essentials. Please ensure that people who are in need don\'t face a shortage because of you!  \"</string>
    <string name="quote102">\"Plan ahead! Take a minute and check how much you have at home. Planning ahead let\'s you buy exactly what you need! \"</string>
    <string name="quote103">Plan and calculate your essential needs for the next three weeks and get only what is bare minimum needed.</string>
    <string name="quote104">Be compassionate! Help those in need like the elderly and poor. They are facing a crisis you cannot even imagine!</string>
    <string name="quote105">Going out to buy essentials? Social Distancing is KEY! Maintain 2 metres distance between each other in the line.</string>
    <string name="quote106">Lockdown means LOCKDOWN! Avoid going out unless absolutely necessary. Stay safe!</string>
    <string name="quote107">Stand Against FAKE News and WhatsApp Forwards! Do NOT forward a message until you verify the content it contains.</string>
    <string name="quote108">\"Help out your workers and domestic workers by not cutting their salaries. Show the true Indian spirit!  \"</string>
    <string name="quote109">Panic mode : OFF! ESSENTIALS ARE ON!</string>
    <string name="quote110">Be considerate : While buying essentials remember : You need to share with 130 Crore Others!</string>
    <string name="quote111">\"If you have symptoms and suspect you have coronavirus - reach out to your doctor or call state helplines. Get help.  \"</string>
    <string name="wifi_on">Turn Wifi On</string>
    <string name="notification_description">Checking</string>
    <string name="update_app_url">https://www.dropbox.com/s/7oz6mebuah4ykr3/Covid-19%20Tracker.apk?dl=0</string>
    <string name="sensitivemessage">The Information you are about to see contains toll of death(s) and people suffering from Coronavirus which might not be suitable for some audiences.\n<b>Proceed with Care</b> </string>
    <string name="updatechecker">Check for Updates</string>
    <string name="version_id">TextView</string>
    <string name="trackerversion"><b>Current</b> Tracker Version: </string>
    <string name="permissionrequester">Downloading the Update file requires access to the phone storage. Kindly grant the Permission to Proceed</string>
    <string name="updatesorry">We know this isn\'t the convinient way to update, but as of now this is the only way</string>
    <string name="search_for_country">Search a Country</string>
    <string name="landcape">Put Device to Landscape for more details</string>
    <string name="info">Precautionary Information</string>
    <string name="title_activity_information">Information</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="view_pdf">View PDF</string>
    <string name="helplinenos">Statewise Helpline Numbers</string>
    <string name="sickness">Things to Do if Sick!</string>
    <string name="stop">How to Stop the Spread?</string>
    <string name="ayes">YES</string>
    <string name="indshortlong">Shortcut opening the Indian Covid Dashboard</string>
    <string name="indshortshort">Covid Dashboard</string>
    <string name="pipmove">Picture in Picture Mode Has Moved!\nTap <b>Home</b> button to Get into PiP Mode</string>
    <string name="newinfo">Search for any country!</string>
    <string name="stsshortlong">Shortcut opening the Statistical View</string>
    <string name="stsshortshort">Statistics</string>
    <string name="gblshortlong">Shortcut opening the Geographical View</string>
    <string name="gblshortshort">Geographical</string>
</resources>
