<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="Indian Dashboard"
        android:enabled="true"
        android:icon="@drawable/indian"
        android:shortcutShortLabel="@string/indshortshort"
        android:shortcutLongLabel="@string/indshortlong">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.aaxena.covid19tracker"
            android:targetClass="com.aaxena.covid19tracker.IndianView"/>
    </shortcut>
    <shortcut
        android:shortcutId="Statistical View"
        android:enabled="true"
        android:icon="@drawable/statistical"
        android:shortcutShortLabel="@string/stsshortshort"
        android:shortcutLongLabel="@string/stsshortlong">
    <intent
        android:action="android.intent.action.VIEW"
        android:targetPackage="com.aaxena.covid19tracker"
        android:targetClass="com.aaxena.covid19tracker.StatisticView"/>
    </shortcut>
    <shortcut
        android:shortcutId="Geographical View"
        android:enabled="true"
        android:icon="@drawable/globe"
        android:shortcutShortLabel="@string/gblshortshort"
        android:shortcutLongLabel="@string/gblshortlong">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.aaxena.covid19tracker"
            android:targetClass="com.aaxena.covid19tracker.GraphicView"/>
    </shortcut>
</shortcuts>