<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="333dp"
        android:layout_height="245dp"
        android:fillViewport="true"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519">

        <TextView
            android:id="@+id/license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:scrollbars="vertical"
            android:text="@string/licensing"
            android:textColor="@color/design_default_color_background"
            android:textSize="20sp" />
    </ScrollView>

    <TextView
        android:id="@+id/sources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/sources"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/updater"
        android:layout_width="194dp"
        android:layout_height="43dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#FF9800"
        android:fontFamily="@font/productsans"
        android:text="@string/updatechecker"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>